# learning_CUDA

./: .gitignore  README.md
4fun/SPH-CUDA/: CMakeLists.txt  main.cu  visualizer.cpp  visualizer.h
4fun/SPH-CUDA/glad/: glad.h
4fun/SPH-CUDA/parameter_files/: params_0.par
4fun/SPH-CUDA/src/: box.h  sphere.h
4fun/SPH-CUDA/src/Renderer/: AttributeBufferLayout.h  IndexBuffer.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.h
4fun/SPH-CUDA/src/Shaders/: Shader.h
4fun/bolas_cayendo/: PERFORMANCE_LOG.md  bolas_cpu_optimized  bolas_cuda_optimized  camera.h  compile.sh  compile_cpu.sh  compile_grid.sh  compile_pairwise.sh  glad.c  kernels.cu  kernels.h  main.cu  main_cpu.cpp  main_grid.cu  main_pairwise.cu  simulation_parameters.h
4fun/bolas_cayendo/temp_backup/: kernels.cu  main.cu
4fun/cam/dibujar/: CLAUDE.md  compile.sh  main.cu
4fun/fluid/: compile.sh  glfwtest.cpp  main.cu
4fun/fur/: camera.h  compile.sh  glm_helper.cuh  hair.h  input_handler.h  kernels.cu  kernels.h  main.cpp  main.cu  simulation_parameters.h  sphere.h
4fun/new_template/: ball.h  glm_helper.h  input_handler.h  kernels.cu  kernels.h  main.cu  simulation_parameters.h  sphere.h
4fun/water_simulation/: README.md
4fun/water_simulation/include/: common.h  input_handler.h  renderer.h  sph_common.h  sph_physics.h  sph_renderer.h  water_app.h  water_physics.h
4fun/water_simulation/shaders/: water.frag
4fun/water_simulation/src/: input_handler.cpp  main.cpp  renderer.cpp  (+6 more)
docs/: CONCLUSION.md  KERNEL_EXPLICACION.md  KERNEL_OPTIMIZACION_MEMORIA.md  OPTIMIZACIONES.md
(+7 files in other folders)
